Fixed scripting and styling issues (state machine was too small)

--- a/code-to-fsm/templates/viewer.css
+++ b/code-to-fsm/templates/viewer.css
@@ -67,6 +67,10 @@ button:active {
   width: 100%;
   height: 100%;
 }
+.mermaid {
+  width: 100%;
+  height: 100%;
+}
 .footer {
   text-align: center;
   color: rgba(255, 255, 255, 0.8);
